Updating analysis bullets

--- a/PyCitySchools/Submit.ipynb
+++ b/PyCitySchools/Submit.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "- School Size plays a role in Overall Passing Rate. School sizes small to medium both outperformed large sized schools.\n",
     "\n",
-    "-Surprisingly spending $630 or less per student led to a higher overall passing rate. Spending $585 or less led to the highest overall passing rate which was 90.36%. Spending between $585 - $630 per student led to a 81.41% passing rate, anything more than $630 led to a decrease in overall passing performance.\n",
+    "- Surprisingly spending 630 or less per student led to a higher overall passing rate. Spending 585 or less led to the highest overall passing rate which was 90.36%. Spending between $585 - $630 per student led to a 81.41% passing rate, anything more than 630 led to a decrease in overall passing performance.\n",
     "  \n",
     "---"
    ]
